# za-vahiny

./: .gitignore  README.md  docker-compose.yml
front/: package-lock.json  package.json
front/src/app/: page.tsx
front/src/components/Product/: Product.tsx
front/src/config/: index.ts
front/src/hooks/Product/: products.ts
server/: .env.sample  Cargo.toml  Dev.DockerFile  DockerFile  Dockerfile  README.md  go.mod  gqlgen.yml  server.go
server/graph/: resolver.go  schema.resolvers.go
server/migrations/2024-01-17-141329_create_tweets/: up.sql
server/migrations/2024-01-17-141347_create_products/: up.sql
server/src/: main.rs
