[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
actix-rt = "2.2.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
validator = { version = "0.14.0", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4"] } 
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
actix-cors = "0.5"